@@ -1,6 +1,5 @@
 
 #include "Python.h"
-#include "structseq.h"
 #include <sys/resource.h>
 #include <sys/time.h>
 #include <string.h>
